cmake_minimum_required(VERSION 3.15)
project(reddit_desktop LANGUAGES C CXX
    VERSION 0.0.1
    DESCRIPTION "Reddit desktop"
    )

include("${CMAKE_SOURCE_DIR}/cmake/CMakeCCache.txt")

option(ENABLE_TESTS "Build tests" ON)
option(ASAN_ENABLE "Build with sanitization on" OFF)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")

SET(REDDITDESKTOP_VERSION_MAJOR "0")
SET(REDDITDESKTOP_VERSION_MINOR "0")
SET(REDDITDESKTOP_VERSION_PATCH "1")

add_definitions(-DREDDITDESKTOP_VERSION="${REDDITDESKTOP_VERSION_MAJOR}.${REDDITDESKTOP_VERSION_MINOR}.${REDDITDESKTOP_VERSION_PATCH}")
add_definitions(-DREDDITDESKTOP_STRING="Reddit Desktop v${REDDITDESKTOP_VERSION_MAJOR}.${REDDITDESKTOP_VERSION_MINOR}.${REDDITDESKTOP_VERSION_PATCH}")

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
endif()

if(MSVC)
    set(WIN32_APP_OPTIONS WIN32)
endif()
set(Boost_USE_STATIC_LIBS        ON)
set(Boost_USE_MULTITHREADED      ON)
if(VCPKG_TOOLCHAIN)
set(Boost_USE_STATIC_RUNTIME ON)
endif()

set(OpenGL_GL_PREFERENCE GLVND)
find_package(OpenGL COMPONENTS OpenGL REQUIRED)
find_package(Threads REQUIRED)
find_package(SDL2 CONFIG REQUIRED)
find_package(Boost 1.74 REQUIRED system filesystem program_options)
find_package(OpenSSL REQUIRED)

if(VCPKG_TOOLCHAIN)
    find_library(LIBMPV mpv ${LIBMPV_DIR})
    find_package(freetype CONFIG REQUIRED)
else()
    set(ENV{PKG_CONFIG_PATH} "/usr/local/lib/pkgconfig:$ENV{PKG_CONFIG_PATH}")
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(MPV REQUIRED IMPORTED_TARGET mpv)
    pkg_check_modules(FREETYPE REQUIRED IMPORTED_TARGET freetype2)
endif()

if(UNIX AND NOT APPLE)
    set(LINUX TRUE) #wrong here, what if we're BSD?
endif()

if(LINUX)
    add_definitions(-DRD_LINUX)
endif()
if(WIN32)
    add_definitions(-DRD_WINDOWS)
endif()
if(APPLE)
    add_definitions(-DRD_APPLE)
endif()



include(GNUInstallDirs)
include(CMakePackageConfigHelpers)

set(EXECUTABLE_NAME reddit_desktop)

add_subdirectory(src)

if(ENABLE_TESTS)
    add_subdirectory(test)
endif()

SET(CPACK_PACKAGE_NAME "reddit_desktop")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Reddit Resktop Application")
SET(CPACK_RESOURCE_FILE_LICENSE_PROVIDED FALSE)
SET(CPACK_INTERACTIVE FALSE)
SET(CPACK_INCLUDE_SUBDIR TRUE)
SET(CPACK_PACKAGE_VERSION_MAJOR ${REDDITDESKTOP_VERSION_MAJOR})
SET(CPACK_PACKAGE_VERSION_MINOR ${REDDITDESKTOP_VERSION_MINOR})
SET(CPACK_PACKAGE_VERSION_PATCH ${REDDITDESKTOP_VERSION_PATCH})

set(CPACK_RPM_RELOCATION_PATHS "/${CMAKE_INSTALL_SYSCONFDIR}" "${CMAKE_INSTALL_BINDIR}")
set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY 0) # don't prepend package name
#set(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
#set(CPACK_RPM_POST_INSTALL_SCRIPT_FILE "${CMAKE_CURRENT_SOURCE_DIR}/postinstall")

SET(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")

INCLUDE(CPack)
